// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing the AddActivity component should call the addActivity action when adding the first activity after filled in the fields and pressed the add button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
      >
        <div>
          <label
            data-testid="name-label-add-activity"
            for="name"
          >
            Name
          </label>
          <input
            data-testid="name-field-add-activity"
            id="name"
            name="name"
            placeholder="Name"
            value="activity1 name"
          />
        </div>
        <div>
          <label
            data-testid="description-label-add-activity"
            for="description"
          >
            Description
          </label>
          <input
            data-testid="description-field-add-activity"
            id="description"
            name="description"
            placeholder="Description"
            value="activity1 description"
          />
        </div>
        <div>
          <label
            data-testid="status-label-add-activity"
            for="status"
          >
            Status
          </label>
          <input
            data-testid="status-checkbox-add-activity"
            id="status"
            name="status"
            type="checkbox"
            value="true"
          />
        </div>
        <div>
          <input
            data-testid="insert-button-add-activity"
            id="submit"
            name="submit"
            type="submit"
            value="Insert"
          />
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
    >
      <div>
        <label
          data-testid="name-label-add-activity"
          for="name"
        >
          Name
        </label>
        <input
          data-testid="name-field-add-activity"
          id="name"
          name="name"
          placeholder="Name"
          value="activity1 name"
        />
      </div>
      <div>
        <label
          data-testid="description-label-add-activity"
          for="description"
        >
          Description
        </label>
        <input
          data-testid="description-field-add-activity"
          id="description"
          name="description"
          placeholder="Description"
          value="activity1 description"
        />
      </div>
      <div>
        <label
          data-testid="status-label-add-activity"
          for="status"
        >
          Status
        </label>
        <input
          data-testid="status-checkbox-add-activity"
          id="status"
          name="status"
          type="checkbox"
          value="true"
        />
      </div>
      <div>
        <input
          data-testid="insert-button-add-activity"
          id="submit"
          name="submit"
          type="submit"
          value="Insert"
        />
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`testing the AddActivity component should call the addActivity action when adding the second activity after filled in the fields and pressed the add button 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        action="#"
      >
        <div>
          <label
            data-testid="name-label-add-activity"
            for="name"
          >
            Name
          </label>
          <input
            data-testid="name-field-add-activity"
            id="name"
            name="name"
            placeholder="Name"
            value="activity2 name"
          />
        </div>
        <div>
          <label
            data-testid="description-label-add-activity"
            for="description"
          >
            Description
          </label>
          <input
            data-testid="description-field-add-activity"
            id="description"
            name="description"
            placeholder="Description"
            value="activity2 description"
          />
        </div>
        <div>
          <label
            data-testid="status-label-add-activity"
            for="status"
          >
            Status
          </label>
          <input
            data-testid="status-checkbox-add-activity"
            id="status"
            name="status"
            type="checkbox"
            value="true"
          />
        </div>
        <div>
          <input
            data-testid="insert-button-add-activity"
            id="submit"
            name="submit"
            type="submit"
            value="Insert"
          />
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      action="#"
    >
      <div>
        <label
          data-testid="name-label-add-activity"
          for="name"
        >
          Name
        </label>
        <input
          data-testid="name-field-add-activity"
          id="name"
          name="name"
          placeholder="Name"
          value="activity2 name"
        />
      </div>
      <div>
        <label
          data-testid="description-label-add-activity"
          for="description"
        >
          Description
        </label>
        <input
          data-testid="description-field-add-activity"
          id="description"
          name="description"
          placeholder="Description"
          value="activity2 description"
        />
      </div>
      <div>
        <label
          data-testid="status-label-add-activity"
          for="status"
        >
          Status
        </label>
        <input
          data-testid="status-checkbox-add-activity"
          id="status"
          name="status"
          type="checkbox"
          value="true"
        />
      </div>
      <div>
        <input
          data-testid="insert-button-add-activity"
          id="submit"
          name="submit"
          type="submit"
          value="Insert"
        />
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
